added show article by id
