# modules/Article/routes.php
@@ -7,6 +7,7 @@ Route::prefix('api')->group(function () {
     Route::prefix('articles')->group(function () {
         Route::get('/', [ArticleController::class, 'index']);
         Route::get('/search', [ArticleController::class, 'search']);
+        Route::get('/show/{id}', [ArticleController::class, 'show']);
         Route::middleware(['auth:sanctum', 'admin'])->group(function () {
             Route::get('/trashed', [ArticleController::class, 'trashed']);
             Route::post('/store', [ArticleController::class, 'store']);
